--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 category: formData.category || null,
                                 niche: formData.niche || null,
                                 description: formData.description,
-                                requirements: formData.requirements || null,
+                                requirments: formData.requirements || null,
                                 contact_name: formData.contactName,
                                 contact_email: formData.contactEmail,
                                 contact_phone: formData.contactPhone || null,
@@ -335,10 +335,10 @@
                                             {opp.niche && <span className="bg-blue-100 text-blue-700 px-3 py-1 rounded-full text-xs font-medium">{opp.niche}</span>}
                                         </div>
                                         <p className="text-gray-700 mb-4">{opp.description}</p>
-                                        {opp.requirements && (
+                                        {opp.requirments && (
                                             <div className="bg-orange-50 rounded-lg p-4 mb-4">
                                                 <p className="text-sm font-semibold text-gray-700 mb-1">Requirements:</p>
-                                                <p className="text-sm text-gray-600">{opp.requirements}</p>
+                                                <p className="text-sm text-gray-600">{opp.requirments}</p>
                                             </div>
                                         )}
                                         <div className="border-t pt-4">
